--- a/src/app/recipes/recipe-list/recipe-list.component.html
+++ b/src/app/recipes/recipe-list/recipe-list.component.html
@@ -1,1 +1,24 @@
-<p>recipe-list works!</p>
+<div class="row">
+    <div class="col col-12 my-3">
+        <button class="btn btn-success">New Recipe</button>
+    </div>
+</div>
+<hr/>
+<div class="row">
+    <div *ngFor="let recipe of recipes" class="col col-12">
+        <a href="#" class="list-group-item d-flex justify-content-between">
+            <div>
+                <h4 class="list-group-item-heading">{{ recipe.name }}</h4>
+                <p class="list-group-item-text">{{ recipe.description }}</p>
+            </div>
+            <div>
+                <img
+                    [src]="recipe.imagePath"
+                    alt="{{ recipe.name }}"
+                    class="img-responsive"
+                    style="max-height: 50px;"/>
+            </div>
+        </a>
+        <app-recipe-item></app-recipe-item>
+    </div>
+</div>
