--- a/src/app/recipes/recipe-detail/recipe-detail.component.html
+++ b/src/app/recipes/recipe-detail/recipe-detail.component.html
@@ -1,1 +1,34 @@
-<p>recipe-detail works!</p>
+<div class="row">
+    <div class="col col-12">
+        <img src="" alt="" class="img-responsive">
+    </div>
+</div>
+<div class="row">
+    <div class="col col-12">
+        <h1>Recipe Name</h1>
+    </div>
+</div>
+<div class="row">
+    <div class="col col-12">
+        <div class="btn-group">
+            <button type="button" class="btn btn-primary dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                Manage Recipe <span class="caret"></span>
+            </button>
+            <ul class="dropdown-menu">
+                <li class="dropdown-item"><a href="#">To Shopping List</a></li>
+                <li class="dropdown-item"><a href="#">Edit Recipe</a></li>
+                <li class="dropdown-item"><a href="#">Delete Recipe</a></li>
+            </ul>
+        </div>
+    </div>
+</div>
+<div class="row">
+    <div class="col col-12">
+        Description
+    </div>  
+</div>
+<div class="row">
+    <div class="col col-12">
+        Ingredients
+    </div>  
+</div>
